# EDAcleanr

./: README.md  demo.ipynb  pyproject.toml  slides.tex
.kiro/specs/data-cleaning-eda-agent/: design.md  requirements.md  tasks.md
R/: demo.Rmd  eda_agent.R
output/: reasoning.md  report.md
src/: __init__.py  csv_loader.py  graph.py  llm_config.py  main.py  models.py  report_generator.py
src/data_cleaning_eda_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tools/: __init__.py  cleaning.py  eda.py  inspection.py
tests/: __init__.py  conftest.py  test_cleaning_tools.py  test_csv_loader.py  test_eda_tools.py  test_graph.py  test_inspection_tools.py  test_llm_config.py  test_main.py  test_models.py  test_report_generator.py
