[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "data-cleaning-eda-agent"
version = "0.1.0"
description = "Autonomous Data Cleaning & EDA Agent built with LangChain/LangGraph"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3",
    "langgraph",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-groq",
    "langchain-aws",
    "pandas",
    "matplotlib",
    "seaborn",
    "chardet",
    "openai",
    "anthropic",
    "groq",
    "hypothesis",
    "pytest",
    "pytest-cov",
]

[project.scripts]
eda-agent = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
